[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/SaveControl.gd" type="Script" id=1]

[node name="SaveControl" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = -57.5
margin_right = 156.5
margin_bottom = 57.5
rect_min_size = Vector2( 320, 0 )
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="HBox"]
margin_top = 8.0
margin_right = 73.0
margin_bottom = 22.0
text = " File Name "
align = 1

[node name="FileLine" type="LineEdit" parent="HBox"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 236.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
placeholder_text = "sample.json"
caret_blink = true
caret_blink_speed = 0.5

[node name="SaveButton" type="Button" parent="HBox"]
unique_name_in_owner = true
margin_left = 240.0
margin_right = 320.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Save"

[node name="InfoLabel" type="Label" parent="."]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 90 )
text = "
Once upon a time I went down to the onceler's oncelhut and found him onceleing. It was disgusting to the maximum allowable limit.
"
align = 1
valign = 1
autowrap = true
